Fixing: work experience section on mobile view

--- a/style.css
+++ b/style.css
@@ -581,7 +581,7 @@ span {
   /* border: 1px solid rgb(42, 190, 42); */
   /* margin: 2rem; */
   height: auto;
-  width: 40rem;
+  width: 45rem;
   padding: 15px;
 }
 .work-experience .work-experience-item p {
